<resources>

<!-- rejiejay -->
    <string name="app_name">Rejiejay</string>
    <string name="img_des">图片</string>
    <string name="tab_name">标签</string>

    <!-- 首页 -->
    <string name="home_data_title">Hi, 我是曾杰杰</string>
    <string name="home_data_subtitle">欢迎来到我的个人APP~</string>
    <string name="home_data_default">0</string>
    <string name="home_data_info">info</string>
    <string name="home_data_warn">warn</string>

    <string name="home_data_add">Add</string>
    <string name="home_data_think">思考记录</string>
    <string name="home_data_think_des">Thinking record</string>
    <string name="home_data_record">日志事件</string>
    <string name="home_data_record_des">Daily record event</string>

    <string name="home_des_work">web前端开发 · 人机互联网络（深圳）有限公司</string>
    <string name="home_des_people">男 · 25岁 · 本科 · 3年工作经验 · 深圳</string>
    <string name="home_des_phone">15976713287</string>
    <string name="home_des_email">454766952@qq.com</string>

    <string name="home_task_title">目标：大目标</string>
    <string name="home_task_intention">初衷：美好生活的期望</string>
    <string name="home_task_specific">具体任务：一场说走就走的旅行</string>
    <string name="home_task_measure">衡量标准：总结记录</string>

    <string name="app_copyright">粤ICP备17119404号 Copyright © Rejiejay曾杰杰</string>

    <!-- 记录 -->
    <string name="record_operating_sort">时间排序</string>
    <string name="record_operating_type">数据类型</string>
    <string name="record_operating_tab">标签</string>
    <string name="record_operating_date">日期</string>
    <string name="record_operating_add_record">新增记录</string>
    <string name="record_operating_add_event">新增事件</string>
    <string name="record_list_test_title">这是标题</string>
    <string name="record_list_test_think">这是联想联想联想联想联想联想联想联想联想联想联想联想联想联想联想联想联想</string>
    <string name="record_list_test_content">这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容这是内容</string>
    <string name="record_list_test_tab">标签</string>
    <string name="record_list_test_cause">起因：内容内容内容内容内容</string>
    <string name="record_list_test_handle">过程：内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容</string>
    <string name="record_list_test_result">结果：内容内容内容内容内容</string>
    <string name="record_list_test_conclusion">结论：内容内容内容内容内容</string>
    <string name="record_list_test_date">19y 24d 3月 第一周 周一</string>

    <!-- 标签页 -->
    <string name="tab_operating_add">新建分类</string>
    <string name="tab_operating_del">删除分类</string>
    <string name="tab_select_all">所有分类</string>
    <string name="tab_select_record">记录</string>
    <string name="tab_select_event">事件</string>

    <!-- 新增编辑记录事件页 -->
    <string name="record_event_left">记录</string>
    <string name="record_event_right">事件</string>
    <string name="record_event_title">标题</string>
    <string name="record_event_add_img">上传图片</string>
    <string name="record_event_edit_thought">素材-思路-联想</string>
    <string name="record_event_edit_content">内容</string>
    <string name="record_event_select_tab">选择分类</string>
    <string name="record_event_confirm">确认</string>
    <string name="record_event_del">删除</string>
    <string name="record_event_situation">情况</string>
    <string name="record_event_target">目标</string>
    <string name="record_event_action">行动</string>
    <string name="record_event_result">结果</string>
    <string name="record_event_conclusion">结论-总结</string>
    <string name="record_event_event_date_picker">选择时间</string>

    <!-- 任务 -->
    <string name="task_detail_thought_btn">指导思想</string>
    <string name="task_detail_design_btn">总体计划</string>
    <string name="task_detail_on_going_tasks">正在执行的任务</string>
    <string name="task_detail_specific">具体任务:</string>
    <string name="task_detail_measure">衡量标准:</string>
    <string name="task_detail_correlation">时跨角相关:</string>
    <string name="task_detail_realizable">可实现:</string>
    <string name="task_detail_deadline">是否必日期:</string>
    <string name="task_detail_remark">结论:</string>
    <string name="task_detail_complete">完成</string>
    <string name="task_detail_todo_tasks">需要去执行的任务</string>
    <string name="task_detail_todo_btn">todo</string>
    <string name="task_detail_up_btn">up</string>
    <string name="task_detail_dowm_btn">dowm</string>
    <string name="task_detail_copy_btn">copy</string>
    <string name="task_detail_del_btn">del</string>
    <string name="task_detail_ok_tasks">已经完成的任务</string>



    <!-- Components 系列界面 -->
    <string name="common_example">示例图片</string>
    <string name="app_upgrade_tip_title">Release Notes (%1$s)</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <!-- EmptyViewFragment 空界面展示界面 -->
    <string name="emptyView_mode_title_loading">显示Loading</string>
    <string name="emptyView_mode_title_single_text">显示一行提示语</string>
    <string name="emptyView_mode_title_double_text">显示两行提示语</string>
    <string name="emptyView_mode_title_single_text_and_button">显示一行文字和按钮</string>
    <string name="emptyView_mode_title_double_text_and_button">显示两行文字和按钮</string>

    <string name="emptyView_mode_desc_single">这是一行提示语</string>
    <string name="emptyView_mode_desc_double">我是一个EmptyView</string>
    <string name="emptyView_mode_desc_detail_double">通过右上角的菜单来切换我的不同状态</string>
    <string name="emptyView_mode_desc_fail_title">加载失败</string>
    <string name="emptyView_mode_desc_fail_desc">请检测网络是否能正常连接</string>
    <string name="emptyView_mode_desc_retry">点击重试</string>

    <!-- TabSegmentFragment 选项卡展示界面 -->
    <string name="tabSegment_item_1_title">Item 1</string>
    <string name="tabSegment_item_2_title">Item 2</string>

    <string name="tabSegment_item_1_content">这是第一个 Item 的内容区</string>
    <string name="tabSegment_item_2_content">这是第二个 Item 的内容区</string>

    <string name="tabSegment_mode_general">简单文字</string>
    <string name="tabSegment_mode_bottom_indicator">文字 + 底部 indicator</string>
    <string name="tabSegment_mode_top_indicator">文字 + 顶部 indicator</string>
    <string name="tabSegment_mode_indicator_with_content">文字 + indicator 长度不要跟随内容长度</string>
    <string name="tabSegment_mode_left_icon_and_auto_tint">文字 + icon(支持四个方向) + 自动着色选中态 icon</string>
    <string name="tabSegment_mode_sign_count">显示红点</string>
    <string name="tabSegment_mode_icon_change">选中态更换 icon</string>
    <string name="tabSegment_mode_muti_color">不同 item，不同文字(icon)颜色</string>
    <string name="tabSegment_mode_change_content_by_index">根据 index 更新 tab 文案</string>
    <string name="tabSegment_mode_replace_tab_by_index">根据 index 完全替换 tab</string>

    <!-- ProgressBarFragment 进度条展示界面 -->
    <string name="progress_start_button_text">点击开始</string>
    <string name="progress_back_button_text">回滚进度</string>

    <string name="circularImageView_item_xml_circle_title">剪裁为圆形+边框+点击效果</string>
    <string name="circularImageView_item_xml_oval_title">剪裁为椭圆形+边框+点击效果</string>
    <string name="circularImageView_item_xml_round_rect_title">剪裁为圆角矩形+边框+点击效果</string>
    <string name="circularImageView_item_xml_scale_type_desc">下面两张图片，大小固定，第一张图片比 View 小，第二张图片比 View大，可以观察 QMUIRadiusImageView 与 QMUIRadiusImageView2 的不同，便于观察，图片设置了黑色背景，</string>

    <string name="circularImageView_modify_tip">可以通过右上角的按钮动态修改下图的效果</string>
    <string name="circularImageView_modify_1">改变边框颜色与宽度</string>
    <string name="circularImageView_modify_2">改变选中态边框颜色与宽度</string>
    <string name="circularImageView_modify_3">改变选中态 Mask 的颜色（带透明度）</string>
    <string name="circularImageView_modify_4">手工切换选中态</string>
    <string name="circularImageView_modify_5">改变圆角大小</string>
    <string name="circularImageView_modify_6">变为圆形</string>
    <string name="circularImageView_modify_7">变为椭圆形</string>
    <string name="circularImageView_modify_8">禁止使用touchSelect态</string>
    <string name="circularImageView_modify_9">重置为初始态</string>

    <!-- PopupFragment 浮层展示界面 -->
    <string name="popup_normal_action_button_text_show">显示普通浮层</string>
    <string name="popup_normal_action_button_text_hide">隐藏普通浮层</string>
    <string name="popup_list_action_button_text_show">显示列表浮层</string>
    <string name="popup_list_action_button_text_hide">隐藏列表浮层</string>

    <!-- LinkTextView 展示界面 -->
    <string name="linkTextView_auto_identify">URL/Mail/Tel自动识别</string>
    <string name="linkTextView_auto_identify_word">可以自动识别网页链接，例如 http://www.qmuiteam.com。\n可以自动识别电话号码，例如 13600000000。\n也可以识别邮件地址，例如 qmuiteam@gmail.com。\n我们可以为其添加自定义的点击事件。</string>

    <!-- SpanTouchFixTextView -->
    <string name="spanTouchFix_description">QMUISpanTouchFixTextView 主要用于修正 TextView 添加 ClickSpan 后的点击行为与事件传递</string>
    <string name="spanTouchFix_system_behavior">TextView系统行为</string>
    <string name="spanTouchFix_qmui_fix_behavior">QMUI修复后行为</string>

    <!-- PullRefreshView -->
    <string name="pull_refresh_default_offset_calculator">默认效果: 下拉到一定距离后 Loading 不动</string>
    <string name="pull_refresh_follow_offset_calculator">Loading 一直跟随下拉</string>
    <string name="pull_refresh_center_gravity_offset_calculator">Loading 保持在下拉区域的中间</string>

    <!-- StickySectionLayout -->
    <string name="sticky_section_decoration_list_footer">这是整个列表的 footer</string>
    <string name="sticky_section_decoration_section_top_tip">这是 section 列表头部的提示语</string>
    <string name="sticky_section_decoration_section_bottom_tip">这是 section 列表底部的提示语</string>


    <string name="system_behavior_1">\@qmui:点击span区域会同时出发span的点击事件和 TextView 的点击事件 #qmui#</string>
    <string name="system_behavior_2">\@qmui: 系统默认情况下，TextView 不添加点击事件，然后 TextView 的父元素添加点击事件，
        那么点击 TextView 将无法触发父元素的点击事件。#qmui#</string>

    <string name="span_touch_fix_1">\@qmui:span的点击事件与textView的点击事件完全分离#qmui#</string>
    <string name="span_touch_fix_2">\@qmui:默认情况下，如果textView添加了clickSpan,#qmui#那么textView的事件将无法冒泡到父级。 但在某些场景（例如微博评论需要整条可点），我们需要将事件冒泡给父元素进行处理。#qmui#</string>

    <!-- ColorHelper 颜色工具 -->
    <string name="colorHelper_alpha_title">设置颜色的 alpha 值</string>
    <string name="colorHelper_ratio_title">根据比例，在两个 color 值之间计算出一个 color 值</string>
    <string name="colorHelper_transform_title">将 color 颜色值转换为字符串</string>

    <string name="colorHelper_squqre_origin">原始</string>
    <string name="colorHelper_squqre_alpha">%1$.1f alpha</string>

    <!-- DeviceHelper 设备检测工具 -->
    <string name="deviceHelper_tablet_title">判断是否为平板设备</string>
    <string name="deviceHelper_flyme_title">判断是否为 Flyme 系统</string>
    <string name="deviceHelper_miui_title">判断是否为 MIUI 系统</string>
    <string name="deviceHelper_meizu_title">判断是否为魅族手机</string>

    <!-- DrawableHelper Drawable 工具 -->
    <string name="drawableHelper_create_from_view_title">从一个 View 创建 Bitmap</string>
    <string name="drawableHelper_create_from_view_button">以本界面 Root View 为例</string>
    <string name="drawableHelper_solid_image_title">创建一张指定大小的纯色图片，支持圆角</string>
    <string name="drawableHelper_circle_gradient_title">创建一张渐变图片，支持圆角</string>
    <string name="drawableHelper_tint_color_title">设置 Drawable 的颜色</string>
    <string name="drawableHelper_separator_title">创建带上分隔线或下分隔线的 Drawable</string>

    <!-- StatusBarHelper 状态栏工具 -->
    <string name="statusBarHelper_translucentActivity_desc">通过在 Activity 中调用 QMUIStatusBarHelper.translucent() 方法，即可实现沉浸式状态栏的效果</string>
    <string name="statusBarHelper_statusBar_height_result">状态栏实际高度为 %1$d</string>

    <!-- Span Utils 各种 Span 工具 -->
    <string name="spanUtils_side_icon_title">在文字左边或者右边直接添加 Icon</string>
    <string name="spanUtils_align_middle_title">支持垂直居中的 ImageSpan</string>
    <string name="spanUtils_margin_image_title">支持增加左右间距的 ImageSpan</string>
    <string name="spanUtils_block_space_title">整行的空白 Span，可用来用于制作段间距</string>
    <string name="spanUtils_custom_type_face_title">自定义部分文字的字体</string>
    <string name="spanUtils_rmb">¥</string><!-- ¥相当于&#xA5 -->

    <!-- 关于界面 -->
    <string name="about_title">关于</string>
    <string name="about_item_homepage">访问官网</string>
    <string name="about_item_github">GitHub</string>
    <string name="about_copyright">© %1$s QMUI Team All rights reserved.</string>

</resources>
