<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!--排序与分类操作-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_corner"
        android:orientation="vertical">

        <!--顶部操作部分-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/record_operating_sort"
                android:textColor="@color/dark3"
                android:textSize="14sp" />

            <View
                android:layout_width="1px"
                android:layout_height="1px"
                android:layout_weight="1"
                android:visibility="invisible" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:orientation="horizontal">

                <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/record_operating_tab"
                    android:textColor="@color/dark3"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1px"
                    android:layout_height="23dp"
                    android:layout_gravity="center"
                    android:background="@color/dark2" />

                <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/record_operating_date"
                    android:textColor="@color/dark3"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>

        <!--分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/dark2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:text="@string/record_operating_add_record"
                    android:textColor="@color/dark3"
                    android:textSize="14sp" />

            </RelativeLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@color/dark2" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:text="@string/record_operating_add_event"
                    android:textColor="@color/dark3"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <!--排序与分类操作-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_item"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/record_Item_img"
            android:layout_width="match_parent"
            android:contentDescription="@string/img_des"
            android:layout_height="wrap_content"
            />

        <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="2dp"
            android:text="@string/home_data_title"
            android:textColor="@color/dark1"
            android:textSize="22sp" />

    </LinearLayout>

    <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="2dp"
        android:text="@string/home_data_title"
        android:textColor="@color/dark1"
        android:textSize="22sp" />

</LinearLayout>