<?xml version="1.0" encoding="utf-8"?><!-- 标签分类页面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical"
    tools:context=".RecordEventActivity">

    <!--顶部的tab-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
            android:id="@+id/record_event_tab_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/record_event_left"
            android:textColor="@color/dark3"
            android:textSize="14sp" />

        <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
            android:id="@+id/record_event_tab_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/record_event_right"
            android:textColor="@color/dark3"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dark2" />

    <!--android:visibility="gone"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/record_event_title"
            android:textColorHint="@color/dark3"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/dark2"
            tools:ignore="autoFill" />

        <!--展示上传的图片-->
        <GridView
            android:id="@+id/record_event_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:columnWidth="60dp"
            android:horizontalSpacing="10dp"
            android:numColumns="auto_fit"
            android:verticalSpacing="10dp" />
    </LinearLayout>

</LinearLayout>
