<?xml version="1.0" encoding="utf-8"?><!-- 标签分类页面 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context=".TabSelectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--新建分类-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="@color/dark2" />

        <LinearLayout
            android:id="@+id/createNewTab"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#fff"
            android:gravity="center|start"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/img_des"
                android:src="@drawable/ic_add_tab" />

            <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/tab_operating_add"
                android:textColor="@color/dark2"
                android:textSize="16sp" />

        </LinearLayout>

        <!--删除分类-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/dark2" />
        <LinearLayout
            android:id="@+id/delTabView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#fff"
            android:gravity="center|start"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/img_des"
                android:src="@drawable/ic_tab_del" />

            <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/tab_operating_del"
                android:textColor="@color/dark2"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="5dp"
            android:background="@color/dark2" />


        <!--所有分类-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="@color/dark2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#fff"
            android:gravity="center|start"
            android:orientation="horizontal">

            <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/tab_select_all"
                android:textColor="@color/dark2"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="0"
                android:contentDescription="@string/img_des"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/dark2" />

        <!--列表-->
        <cn.rejiejay.application.tabselect.TabView
            android:id="@+id/tab_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/dark2" />

    </LinearLayout>


</ScrollView>
